# GccQOL

./: README.md
ExeBuilder/: Makefile
Makefiles/LibraryCreation/: makefile
Makefiles/ProjectCreation/: makefile
Makefiles/sfml-template/: CMakeLists.txt  main.cpp  makefile
StaticLibraries/RandomizeQOL/: makefile
StaticLibraries/RandomizeQOL/include/: RandomizeQOL.h
StaticLibraries/RandomizeQOL/src/: randSource.cpp
cmake/: CMakeLists.txt
cmkae/: CMakeLists.txt
